// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignsUserMarketingPage renders for disabled 1`] = `
<CampaignsUserMarketingPage
  enableReadAccess={false}
>
  <CampaignsMarketing
    body={
      <section
        className="my-3"
      >
        <h2>
          Interested in campaigns?
        </h2>
        <p>
          At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
        </p>
        <div
          className="row"
        >
          <ol>
            <li>
              Let your Sourcegraph admin know you're interested in using campaigns for your team.
            </li>
            <li>
              Learn how to
               
              <a
                href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
              >
                get started creating campaigns
              </a>
              .
            </li>
          </ol>
        </div>
        <a
          className="btn btn-primary"
          href="https://docs.sourcegraph.com/user/campaigns"
          rel="noopener"
        >
          Read more about campaigns
        </a>
      </section>
    }
  >
    <section
      className="mt-3 mb-5"
    >
      <CampaignHeader>
        <div
          className="d-flex w-100 mb-2 justify-content-between align-items-center"
        >
          <div>
            <h1
              className="d-inline-block mb-0"
            >
              <Memo(ImageAutoAdjustIcon)
                className="icon-inline mr-2 text-muted"
              >
                <svg
                  className="mdi-icon icon-inline mr-2 text-muted"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
                  />
                </svg>
              </Memo(ImageAutoAdjustIcon)>
              Campaigns
              <sup>
                <span
                  className="ml-2 badge badge-merged text-uppercase"
                >
                  Beta
                </span>
              </sup>
            </h1>
          </div>
        </div>
      </CampaignHeader>
      <h2
        className="mb-5"
      >
        Make and track large-scale changes across all code
      </h2>
      <div
        className="text-center"
      >
        <iframe
          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
          allowFullScreen={true}
          className="percy-hide chromatic-ignore"
          frameBorder="0"
          height="315"
          src="https://www.youtube.com/embed/aqcCrqRB17w"
          width="560"
        />
      </div>
    </section>
    <section
      className="my-3"
    >
      <h2>
        Interested in campaigns?
      </h2>
      <p>
        At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
      </p>
      <div
        className="row"
      >
        <ol>
          <li>
            Let your Sourcegraph admin know you're interested in using campaigns for your team.
          </li>
          <li>
            Learn how to
             
            <a
              href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
            >
              get started creating campaigns
            </a>
            .
          </li>
        </ol>
      </div>
      <a
        className="btn btn-primary"
        href="https://docs.sourcegraph.com/user/campaigns"
        rel="noopener"
      >
        Read more about campaigns
      </a>
    </section>
    <section
      className="my-3"
    >
      <h2>
        Ask questions and share feedback
      </h2>
      <p>
        Get in touch on Twitter 
        <a
          href="https://twitter.com/srcgraph"
        >
          @srcgraph
        </a>
        , file an issue in our
         
        <a
          href="https://github.com/sourcegraph/sourcegraph/issues"
        >
          public issue tracker
        </a>
        , or email
         
        <a
          href="mailto:feedback@sourcegraph.com"
        >
          feedback@sourcegraph.com
        </a>
        . We look forward to hearing from you!
      </p>
    </section>
  </CampaignsMarketing>
</CampaignsUserMarketingPage>
`;

exports[`CampaignsUserMarketingPage renders for enabled 1`] = `
<CampaignsUserMarketingPage
  enableReadAccess={true}
>
  <CampaignsMarketing
    body={
      <section
        className="my-3"
      >
        <h2>
          Interested in campaigns?
        </h2>
        <p>
          At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
        </p>
        <div
          className="row"
        >
          <ol>
            <li>
              Let your Sourcegraph admin know you're interested in using campaigns for your team.
            </li>
            <li>
              Ask your Sourcegraph admin for
               
              <a
                href="https://docs.sourcegraph.com/user/campaigns"
                rel="noopener"
              >
                read-only access
              </a>
               
              to campaigns.
              <div
                className="alert alert-info mt-3"
              >
                <b>
                  NOTE:
                </b>
                 Repository permissions are NOT enforced by campaigns, so your admin may not grant read-only access if your Sourcegraph instance has repository permissions configured.
              </div>
            </li>
            <li>
              Learn how to
               
              <a
                href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
              >
                get started creating campaigns
              </a>
              .
            </li>
          </ol>
        </div>
        <a
          className="btn btn-primary"
          href="https://docs.sourcegraph.com/user/campaigns"
          rel="noopener"
        >
          Read more about campaigns
        </a>
      </section>
    }
  >
    <section
      className="mt-3 mb-5"
    >
      <CampaignHeader>
        <div
          className="d-flex w-100 mb-2 justify-content-between align-items-center"
        >
          <div>
            <h1
              className="d-inline-block mb-0"
            >
              <Memo(ImageAutoAdjustIcon)
                className="icon-inline mr-2 text-muted"
              >
                <svg
                  className="mdi-icon icon-inline mr-2 text-muted"
                  fill="currentColor"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M19 10V19H5V5H14V3H5C3.92 3 3 3.9 3 5V19C3 20.1 3.92 21 5 21H19C20.12 21 21 20.1 21 19V10H19M17 10L17.94 7.94L20 7L17.94 6.06L17 4L16.06 6.06L14 7L16.06 7.94L17 10M13.25 10.75L12 8L10.75 10.75L8 12L10.75 13.25L12 16L13.25 13.25L16 12L13.25 10.75Z"
                  />
                </svg>
              </Memo(ImageAutoAdjustIcon)>
              Campaigns
              <sup>
                <span
                  className="ml-2 badge badge-merged text-uppercase"
                >
                  Beta
                </span>
              </sup>
            </h1>
          </div>
        </div>
      </CampaignHeader>
      <h2
        className="mb-5"
      >
        Make and track large-scale changes across all code
      </h2>
      <div
        className="text-center"
      >
        <iframe
          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
          allowFullScreen={true}
          className="percy-hide chromatic-ignore"
          frameBorder="0"
          height="315"
          src="https://www.youtube.com/embed/aqcCrqRB17w"
          width="560"
        />
      </div>
    </section>
    <section
      className="my-3"
    >
      <h2>
        Interested in campaigns?
      </h2>
      <p>
        At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
      </p>
      <div
        className="row"
      >
        <ol>
          <li>
            Let your Sourcegraph admin know you're interested in using campaigns for your team.
          </li>
          <li>
            Ask your Sourcegraph admin for
             
            <a
              href="https://docs.sourcegraph.com/user/campaigns"
              rel="noopener"
            >
              read-only access
            </a>
             
            to campaigns.
            <div
              className="alert alert-info mt-3"
            >
              <b>
                NOTE:
              </b>
               Repository permissions are NOT enforced by campaigns, so your admin may not grant read-only access if your Sourcegraph instance has repository permissions configured.
            </div>
          </li>
          <li>
            Learn how to
             
            <a
              href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
            >
              get started creating campaigns
            </a>
            .
          </li>
        </ol>
      </div>
      <a
        className="btn btn-primary"
        href="https://docs.sourcegraph.com/user/campaigns"
        rel="noopener"
      >
        Read more about campaigns
      </a>
    </section>
    <section
      className="my-3"
    >
      <h2>
        Ask questions and share feedback
      </h2>
      <p>
        Get in touch on Twitter 
        <a
          href="https://twitter.com/srcgraph"
        >
          @srcgraph
        </a>
        , file an issue in our
         
        <a
          href="https://github.com/sourcegraph/sourcegraph/issues"
        >
          public issue tracker
        </a>
        , or email
         
        <a
          href="mailto:feedback@sourcegraph.com"
        >
          feedback@sourcegraph.com
        </a>
        . We look forward to hearing from you!
      </p>
    </section>
  </CampaignsMarketing>
</CampaignsUserMarketingPage>
`;
